--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker images
+      - name: Build Docker images
         run: |
           docker-compose -f docker-compose.yml build
-          docker-compose -f docker-compose.yml push
+
+      - name: Tag and Push Docker images
+        run: |
+          docker tag node:18-alpine mustafaj/todo-app:latest
+          docker tag mysql:8.0 mustafaj/todo-mysql:latest
+          docker push mustafaj/todo-app:latest
+          docker push mustafaj/todo-mysql:latest
